Edit header section

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CV - Ocat</title>
-  <meta name="description" content="simple CV example created with HTML and CSS">
+  <title>My Resume</title>
+  <meta name="description" content="Resume created with HTML and CSS">
   <meta name="author" content="Fly Nerd">
   <link rel="icon" href="./img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,23 +16,17 @@
     <div>
       <img src="./img/avatar.jpg" />
     </div>
-    <h1>Ocat Verdigris</h1>
+    <h1>Zarilham Nurrahman</h1>
     <section>
-      <p>Hello! I am Ocat Verdigris. I work as interface and front-end developer. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
-      <a href="https://www.facebook.com/flynerdpl/" target="_blank">
-        <i class="fab fa-facebook-f"></i>
+      <p>Hi! I'm Zarilham Nurrahman, a fresh graduate from Brawijaya University with a major in Information System. I'm interested in cloud computing, Linux, and networking. I'm dedicated, detail-oriented, and eager to learn to give my best.</p>
+      <a href="mailto:zarilhamn@gmail.com" target="_blank">
+        <i class="fas fa-envelope"></i>
       </a>
-      <a href="https://www.twitter.com/flynerdpl/" target="_blank">
-        <i class="fab fa-twitter"></i>
+      <a href="https://www.linkedin.com/in/zarilham-nurrahman/" target="_blank">
+        <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://github.com/ritaly" target="_blank">
-        <i class="fab fa-github-alt"></i>
-      </a>
-      <a href="https://www.instagram.com/flynerdpl/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/ritalyczywek/" target="_blank">
-        <i class="fab fa-linkedin-in"></i>
+      <a href="https://github.com/labakie" target="_blank">
+        <i class="fab fa-github"></i>
       </a>
     </section>
   </header>
