Edit all contents

--- a/index.html
+++ b/index.html
@@ -32,37 +32,21 @@
   </header>
   <main>
     <section>
-      <h3>Courses & Workshops</h3>
-      <article class='course'>
+      <h3>Certification</h3>
+      <article class='certification'>
         <div class='title'>
-          <h4>Udacity: Intro to HTML and CSS</h4>
+          <h4>AWS Certified Solutions Architect - Associate (SAA-C03)</h4>
         </div>
         <div class="descrition">
-          <p>Build styled, well-structured websites. Learn how to use HTML5 standard to create websites. Understand CSS syntax, selectors, and units. Learn about code editors and a browser's Developer Tools.</p>
+          <p>Demonstrated cloud fluency and foundational AWS knowledge about essential services necessary to set up AWS-focused projects.</p>
         </div>
       </article>
-      <article class='course'>
+      <article class='certification'>
         <div class='title'>
-          <h4>Udemy: The Web Developer Bootcamp</h4>
+          <h4>AWS Certified Cloud Practitioner (CLF-C02)</h4>
         </div>
         <div class="descrition">
-          <p>Learn how to create full-stack web applications from scratch using HTML, CSS, JavaScript, jQuery, VanillaJS, NodeJS, MongoDB.</p>
-        </div>
-      </article>
-      <article class='course'>
-        <div class='title'>
-          <h4>EdX: Web Programming with JavaScript</h4>
-        </div>
-        <div class="descrition">
-          <p>Learn how to create web apps and prototypes with JavaScript, represent and exchange data using JavaScript Object Notation (JSON), and how to access RESTful APIs on the web.</p>
-        </div>
-      </article>
-      <article class='course'>
-        <div class='title'>
-          <h4>Django Girls: 2-Day Workshops</h4>
-        </div>
-        <div class="descrition">
-          <p>Learn back-end development with simple blog application using Django  framework.</p>
+          <p>Learned to use various AWS technologies to design solutions based on the AWS Well-Architected Framework.</p>
         </div>
       </article>
     </section>
@@ -70,30 +54,18 @@
       <h3>Skills</h3>
       <div class='skills'>
         <div class='column'>
-          <h4>Good knowledge</h4>
           <ul>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>JavaScript ES5/6</li>
-            <li>SQL</li>
-          </ul>
-        </div>
-        <div class='column'>
-          <h4>Basic knowledge</h4>
-          <ul>
-            <li>jQuery</li>
-            <li>NodeJS</li>
-            <li>MongoDB</li>
-            <li>Django</li>
+            <li>Cloud Computing</li>
+            <li>AWS</li>
+            <li>Git</li>
+            <li>Linux</li>
+            <li>Networking basics</li>
           </ul>
         </div>
         <div>
           <h4>Languages</h4>
-          <p>🇵🇱 Polish - Native speaker</p>
-          <p>🇬🇧 English - Proficient C1/C2</p>
-          <p>🇫🇷 French - Advanced - C1</p>
-          <p>🇪🇸 Spanish - Intermediate - B1/B2</p>
-          <p>🇩🇪 German - Elementary / Communicative - A2</p>
+          <p>🇮🇩 Indonesian - Native Speaker</p>
+          <p>🇬🇧 English - Upper Intermediate B2</p>
         </div>
       </div>
     </section>
@@ -102,18 +74,21 @@
       <h3>Education</h3>
       <article>
         <div class='school'>
-          <span>2015-2018</span> <strong>Octocats tech academy</strong>
+          <span>2020-2024</span> <strong>Brawijaya University</strong>
         </div>
         <div class="descrition">
-          Bechelor Degree of Octorobotics
+          Bechelor Degree of Information System
+        </div>
+        <div class="descrition">
+          GPA: 3.87
         </div>
       </article>
       <article>
         <div class='school'>
-          <span>2012-2015</span> <strong>Underwater kittens high school</strong>
+          <span>2017-2020</span> <strong>SMAN 1 Malang</strong>
         </div>
         <div>
-          Main subject: Cathemathics
+          Main subject: MIPA
         </div>
       </article>
     </section>
@@ -121,21 +96,21 @@
       <h3>Experience</h3>
       <article>
         <div class='job-title'>
-          <span>03.2018 - 06.2018</span> <strong>Tentacles Company</strong><br> <strong>Position:</strong> Web developer Intern
+          <span>August 2023 - December 2023</span> <strong>IDCloudHost</strong><br> <strong>Position:</strong> System Engineer Intern
         </div>
         <div>
-          <p><strong>Tech stack:</strong> HTML5 / CSS / JavaScript / jQuery</p>
+          <p><strong>Tech stack:</strong> Linux / Server hardware & management / Proxmox VE </p>
           <ul class="job-description">
-            <li>Develop web application for Octopoda departments</li>
-            <li>Implement UI (front-end site) based on received graphic design and requirements</li>
-            <li>Co-operate with the back-end team </li>
+            <li>install, configure, and managing systems primarily using Linux and Windows Server</li>
+            <li>Handling server mounting, cabling, and management at various Data Centers</li>
+            <li>Co-operate with the network engineer team </li>
           </ul>
         </div>
       </article>
     </section>
   </main>
   <footer>
-    <p>Created by: <a href="https://www.flynerd.pl/">@flynerd</a>  / <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2018 </p>
+    <p>Created by: @flynerd / Modified by: @labakie / 2025 </p>
   </footer>
 </body>
 </html>
