--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div>
-      <img src="./img/avatar.jpg" />
+      <img src="./img/profile.jpg" />
     </div>
     <h1>Zarilham Nurrahman</h1>
     <section>
